pos/rot/scale borders

--- a/src/index.styl
+++ b/src/index.styl
@@ -292,8 +292,15 @@ div.vec4
 
 .vec2 input.number,
 .vec3 input.number
-  width 55px
+  width 45px
 
+.commonComponents .vec3 input.number
+  border 1px solid #24CAFF
+  border-radius 5px
+  margin-right 2px
+  transition border-color .1s
+  &:hover
+    border-color #44EAFF
 
 .vec4 input.number
   width 34px
