fix search clear btn placement

--- a/src/index.styl
+++ b/src/index.styl
@@ -143,8 +143,8 @@ body.aframe-inspector-opened
 
     .fa-times
       position absolute
-      right 32px
-      top 10px
+      right 15px
+      top 9px
 
   input
     background-color transparent
@@ -688,10 +688,8 @@ body.aframe-inspector-opened
         .collapsespace,
         .id
           color #575757
-
-
-  .scenegraph .entity .componenthover
-    color #1faaf2
+    .componenthover
+      color #1faaf2
 
   .scenegraph .entity.active .componenthover
     color #1888c1
