apply max width to mixin options

--- a/src/index.styl
+++ b/src/index.styl
@@ -984,3 +984,6 @@ body.aframe-inspector-opened
     margin-top 10px
     vertical-align middle
     width 80%
+
+  .mixinOptions select
+    max-width 150px
