clean up scene graph selected entity data flow

--- a/src/index.styl
+++ b/src/index.styl
@@ -762,6 +762,8 @@ body.aframe-inspector-opened
     color #fff
     font-family Consolas, Andale Mono, Monaco, Courier New, monospace
     font-size 16px
+    position relative
+    bottom 2px
 
   .add-component
     width 200px
