camelcase texture modal id

--- a/src/index.styl
+++ b/src/index.styl
@@ -397,7 +397,7 @@ body.aframe-inspector-opened
     font-weight 100
     margin 0.6em 0
 
-#texture-modal .modal-content
+#textureModal .modal-content
     height calc(100% - 50px)
     width calc(100% - 50px)
 
