--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -14,6 +14,8 @@ body.aframe-inspector-opened
 
 
 #aframeInspector
+  @import './scenegraph';
+
   .Select,
   code,
   pre,
@@ -59,12 +61,12 @@ body.aframe-inspector-opened
   input
     outline none /* osx */
 
-  #leftPanel,
+  #scenegraph,
   #rightPanel
     z-index 9998
 
   #sidebar,
-  #leftPanel,
+  #scenegraph,
     .panel
       cursor default
       user-select none
@@ -106,13 +108,6 @@ body.aframe-inspector-opened
 
   .toggle-edithover
     background-color rgb(228, 43, 90)
-
-  .scenegraph
-    border-top 1px solid #111
-    padding-top 32px
-
-    .search
-      padding 5px
 
   #toolbar
     background-color #333
@@ -178,17 +173,6 @@ body.aframe-inspector-opened
 
   input.error
     border 1px solid #a00
-
-  #leftPanel
-    background #2b2b2b
-    bottom 0
-    display flex
-    flex-direction column
-    left 0
-    overflow auto
-    position fixed
-    top 0
-    width 230px
 
   #sidebar
     background #2b2b2b
@@ -358,14 +342,6 @@ body.aframe-inspector-opened
     font-size 14px
     padding-top 2px
 
-  .scenegraph-bottom
-    background-color #323232
-    border-top 1px solid #111
-    bottom 10
-    height 40px
-    left 0
-    z-index 100
-
   a.button
     color #bcbcbc
     font-size 16px
@@ -374,10 +350,6 @@ body.aframe-inspector-opened
 
   a.buttonhover
     color #1faaf2
-
-  .scenegraph-bottom a
-    float right
-    margin 10px
 
   .modal
     animation animateopacity 0.2s ease-out
@@ -661,63 +633,6 @@ body.aframe-inspector-opened
     padding 0
     width 230px
 
-  .scenegraph .entity
-    background #2b2b2b
-    cursor pointer
-    display flex
-    justify-content space-between
-    padding 4px
-    width 100%
-    white-space nowrap
-    transition background .1s
-    &:hover
-      background #444
-    &.active
-      background-color #1faaf2
-      color #fff
-    &.novisible
-      &.active
-        span,
-        .fa,
-        .collapsespace,
-        .id
-          color #AAA
-      &:not(.active)
-        span,
-        .fa,
-        .collapsespace,
-        .id
-          color #575757
-    .componenthover
-      color #1faaf2
-
-  .scenegraph .entity.active .componenthover
-    color #1888c1
-
-  .scenegraph
-    .entity
-      .entityIcons
-        margin-left 2px
-
-      .entityActions
-        display none
-        margin 0 14px 0 14px
-
-        .button
-          color #fff
-          font-size 12px
-          margin-left 6px
-
-      &.active
-        .entityActions
-          display inline
-
-  .scenegraph .fa
-    color #CCC
-
-  .scenegraph .active .fa
-    color #FAFAFA
-
   .component-title
     align-items center
     display flex
@@ -900,31 +815,6 @@ body.aframe-inspector-opened
   .gallery a.fa.texture-link
     box-shadow 0 0 14px -1px rgba(0, 0, 0, 0.75)
     position fixed
-
-  .scenegraph .id
-    color #ccc
-
-  .scenegraph .option.active .id
-    color #fff
-
-  .scenegraph .collapsespace
-    color #eee
-    display inline-block
-    text-align center
-    width 14px
-
-  .scenegraph .fa-eye
-    color #bbb
-
-  .scenegraph .option
-    white-space pre
-
-  .option spanfirst-child
-    overflow hidden
-    text-overflow ellipsis
-
-  .scenegraph .option .icons a.button
-    color #fff
 
   .toggle-sidebar
     align-items center
