move texture modal stuff to stylus module

--- a/src/style/scenegraph.styl
+++ b/src/style/scenegraph.styl
@@ -95,6 +95,26 @@
 
   .search
     padding 5px
+    color #aaa
+    font-size 16px
+    position relative
+
+    input
+      background #222
+      border-radius 5px
+      height 22px
+      text-indent 10px
+      width 216px
+
+    .fa-search
+      position absolute
+      right 14px
+      top 8px
+
+    .fa-times
+      position absolute
+      right 15px
+      top 9px
 
 .scenegraph-bottom
   background-color #323232
