--- a/src/style/scenegraph.styl
+++ b/src/style/scenegraph.styl
@@ -1,3 +1,13 @@
+#toolbar
+  background-color #333
+
+  .toolbarActions
+    padding 9px 0 5px
+
+    a.disabled
+      color #666
+      cursor default
+
 #scenegraph
   background #2b2b2b
   border-top 1px solid #111
@@ -115,6 +125,18 @@
       position absolute
       right 15px
       top 9px
+
+  .outliner
+    background #2b2b2b
+    color #868686
+    cursor default
+    flex 1 1 auto
+    font-size 12px
+    height calc(100% - 98px)
+    outline none
+    overflow-y auto
+    padding 0
+    width 230px
 
 .scenegraph-bottom
   background-color #323232
