--- a/src/style/viewport.styl
+++ b/src/style/viewport.styl
@@ -1,7 +1,16 @@
-.transformToolbar
+#viewportBar
   background-color #262626
   color #333
+  display flex
+  flex-grow 2
   height 32px
+  justify-content space-between
+  left 0
+  margin 0 auto
+  right 0
+  top 0
+
+.transformToolbar
   position relative
 
   *
