--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -27,6 +27,7 @@ div.vec4
   width 34px
 
 .collapsible-header
+  align-items center
   display flex
   justify-content space-between
 
@@ -209,3 +210,7 @@ a.help-linkhover
 .component-title
   align-items center
   display flex
+
+#componentEntityHeader .static
+  background #222
+  height 10px
