--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -202,10 +202,16 @@ body.aframe-inspector-opened
     justify-content space-between
     left 0
     height 100%
+    pointer-events none
     position fixed
     top 0
     width 100%
     z-index 999999
+
+  #scenegraph,
+  #viewportBar,
+  #rightPanel
+    pointer-events all
 
   .aframe-inspector-opened a-scene .a-canvas
     background-color #191919
