note selected entity in hud

--- a/src/style/viewport.styl
+++ b/src/style/viewport.styl
@@ -1,6 +1,7 @@
 #viewportBar
+  align-items center
   background-color #323232
-  color #333
+  color #FAFAFA
   display flex
   flex-grow 2
   height 32px
@@ -41,3 +42,5 @@
 .local-transform a.button
   padding-top 0
 
+#viewportHud
+  color #1faaf2
