use react-select for mixin, style selects more

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -204,9 +204,6 @@ a.help-linkhover
   margin 0 0 0 5px
   width 68px
 
-.mixinOptions select
-  max-width 150px
-
 .component-title
   align-items center
   display flex
@@ -214,3 +211,6 @@ a.help-linkhover
 #componentEntityHeader .static
   background #222
   height 10px
+
+#mixinSelect
+  width 175px
