--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -1,3 +1,5 @@
+@import './lib';
+
 body.aframe-inspector-opened,
 .toggle-edit
   font-family BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
@@ -16,6 +18,7 @@ body.aframe-inspector-opened
   @import './scenegraph';
   @import './components';
   @import './help';
+  @import './select';
   @import './textureModal';
   @import './viewport';
   @import './widgets';
