--- a/src/style/scenegraph.styl
+++ b/src/style/scenegraph.styl
@@ -1,3 +1,5 @@
+@import './lib';
+
 #toolbar
   background-color #333
 
@@ -70,6 +72,8 @@
 
   .fa
     color #CCC
+    &:hover
+      color $primary
 
   .active .fa
     color #FAFAFA
