--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -17,6 +17,7 @@ body.aframe-inspector-opened
 #aframeInspector
   @import './scenegraph';
   @import './components';
+  @import './entity';
   @import './help';
   @import './select';
   @import './textureModal';
