--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -91,6 +91,7 @@ div.vec4
   cursor default
   display inline-block
   overflow hidden
+  padding-right 10px
   text-overflow ellipsis
   vertical-align middle
   width 120px
