--- a/src/style/entity.styl
+++ b/src/style/entity.styl
@@ -1,7 +1,7 @@
 @import './lib';
 
 .entityPrint
-  font-family Consolas, Andale Mono, Monaco, Courier New, monospace
+  font-family $monospace
 
 .entityName
   display inline-block
