--- a/src/style/lib.styl
+++ b/src/style/lib.styl
@@ -1,8 +1,15 @@
 $primary=#1faaf2
+$primaryhover=lighten(#1faaf2, 35%)
+
 $red=#a74482
 $green=#a6ebc9
 $orange=#f3ca40
 
 $gray=#262626
+$grayalt=#323232
+$grayhover=#444
+
 $lightgray=#AAA
 $white=#FAFAFA
+
+$monospace=font-family Consolas, Andale Mono, Monaco, Courier New, monospace
