--- a/src/style/scenegraph.styl
+++ b/src/style/scenegraph.styl
@@ -35,7 +35,7 @@
     &.active
       background-color #1faaf2
       color #fff
-      .componenthover
+      .component:hover
         color #1888c1
       .entityActions
         display inline
@@ -55,7 +55,7 @@
         .id
           color #575757
 
-  .componenthover
+  .component:hover
     color #1faaf2
 
   .entityIcons
