--- a/src/style/textureModal.styl
+++ b/src/style/textureModal.styl
@@ -75,7 +75,7 @@
   width 155px
 
 .gallery li.selected,
-.gallery lihover
+.gallery li:hover
   box-shadow 0 0 0 2px #1eaaf1
 
 .gallery li .detail
@@ -110,7 +110,7 @@
   white-space nowrap
 
 .gallery li.selected .detail,
-.gallery lihover .detail
+.gallery li:hover .detail
   background-color #444
 
 .gallery li .detail span
@@ -123,7 +123,7 @@
   width 140px
 
 .gallery li.selected .detail span,
-.gallery lihover .detail span
+.gallery li:hover .detail span
   color #888
 
 .gallery li .detail span.title
