fix icon display in entity header

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -194,9 +194,12 @@ a.help-linkhover
     height 10px
   .entityPrint
     font-size 14px
+    padding-left 5px
   .entityName
     max-width 160px
     top 0
+  .entityIcons
+    color #FAFAFA
 
 #mixinSelect
   width 160px
