--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -112,6 +112,12 @@ body.aframe-inspector-opened
     min-height 14px
     outline none
 
+  input[type="checkbox"]
+    cursor pointer
+    margin 0
+    height 22px
+    width 22px
+
   input.number
     background-color transparent !important
     border 0
