revert white component headers

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -57,17 +57,10 @@ div.vec4
   &.collapsed
     background-color $grayalt
     .static,
-    .fa
+    .componentHeaderActions
       color $white
     &:hover
       background-color $grayhover
-  &:not(.collapsed)
-    background-color $lightgray
-    .static,
-    .fa
-      color $gray
-      &:hover
-        background-color lighten($lightgray, 10%)
 
 .collapsible .menu
   text-align right
