--- a/src/style/viewport.styl
+++ b/src/style/viewport.styl
@@ -13,7 +13,7 @@
   right 0
   top 0
 
-.transformToolbar
+.toolbarButtons
   position relative
 
   *
@@ -38,7 +38,7 @@
   padding-left 10px
 
 .local-transform label
-  color $ligtgray
+  color $lightgray
   font-family $monospace
   padding-left 5px
 
