use select for ortho

--- a/src/style/viewport.styl
+++ b/src/style/viewport.styl
@@ -44,3 +44,16 @@
 
 .local-transform a.button
   padding-top 0
+
+#cameraSelect
+  cursor pointer
+  width 126px
+  .select__dropdown-indicator
+    padding-left 3px
+    padding-right 3px
+
+#cameraToolbar
+  align-items center
+  display flex
+  a
+    margin-right 10px
