use primary color for defined prop row

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -150,7 +150,7 @@ div.vec4
     width 68px
 
 .propertyRowDefined .text
-  color $orange
+  color $primary
 
 .components *
   vertical-align middle
