--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -69,6 +69,14 @@ body.aframe-inspector-opened
   input
     outline none /* osx */
 
+  .gltfIcon img
+    height 20px
+    left 5px
+    padding 0 5px
+    position relative
+    top 4px
+    width 20px
+
   #scenegraph,
   #rightPanel
     z-index 9998
