semibold defined properties

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -144,7 +144,7 @@ div.vec4
     width 68px
 
 .propertyRowDefined .text
-  color $primary
+  font-weight 500
 
 .components *
   vertical-align middle
