remove select indicator, shrink ortho toggle

--- a/src/style/select.styl
+++ b/src/style/select.styl
@@ -7,6 +7,9 @@
 .select__indicator
   height 26px
 
+.select__indicator-separator
+  display none
+
 .select__control,
 .select__menu
   background #363636
