--- a/src/style/select.styl
+++ b/src/style/select.styl
@@ -39,3 +39,13 @@
 
 .select__dropdown-indicator
   padding 3px 8px
+
+.select__multi-value
+  background $gray
+  color $white
+
+.select__multi-value__label
+  color $white
+
+.select__value-container--is-multi > :last-child
+  display none
