match react-select bg color with rest of inputs

--- a/src/style/select.styl
+++ b/src/style/select.styl
@@ -2,6 +2,8 @@
 
 .select__control
   border 0
+  border-radius 0
+  cursor pointer
   min-height 26px
 
 .select__indicator
@@ -12,12 +14,12 @@
 
 .select__control,
 .select__menu
-  background #363636
+  background $black
 
 .select__placeholder,
 .select__menu,
 .select__single-value
-  color #CACACA
+  color $white
 
 .select__option
   cursor pointer
@@ -29,7 +31,7 @@
   font-size 11px
 
 .select__option--is-focused
-  background #444
+  background $gray
 
 .select__value-container
   height 26px
