--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -153,7 +153,7 @@ body.aframe-inspector-opened
   input,
   textarea,
   select
-    background #222
+    background $black
     border 1px solid transparent
     color #888
 
